Fix: Add CR_TOKEN environment variable for Chart Releaser Action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Run Chart Releaser Action
         uses: helm/chart-releaser-action@v1.7.0
+        env:
+          CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           charts_dir: charts           # 你的 charts 目录（默认 charts）
           publish_dir: gh-pages       # 临时工作分支/目录（action 会提交 gh-pages）
