--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,5 +19,5 @@ jobs:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           charts_dir: charts           # 你的 charts 目录（默认 charts）
-          publish_dir: gh-pages       # 临时工作分支/目录（action 会提交 gh-pages）
+          pages_branch: gh-pages       # 临时工作分支/目录（action 会提交 gh-pages）
           # optional: enable_signing: true
